--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "color-string": "^1.5.3",
     "discord.js": "^11.5.1",
     "discordjs-command": "^0.8.5",
     "discordjs-prompter": "^1.0.0",
@@ -23,6 +25,14 @@
     "sharp": "^0.22.1"
   },
   "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-plugin-jest": "^22.7.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
     "nodemon": "^1.19.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
