➕ Added chalk, loglevel plugin and bumped command

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.2",
     "color-string": "^1.5.3",
     "discord.js": "^11.5.1",
-    "discordjs-command": "^0.8.5",
+    "discordjs-command": "^0.8.6",
     "discordjs-prompter": "^1.0.0",
     "filesize": "^4.1.2",
     "jimp": "^0.6.4",
     "loglevel": "^1.6.3",
+    "loglevel-plugin-prefix": "^0.8.4",
     "moment": "^2.24.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
