--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "lint": "eslint ."
+    "test": "jest --verbose && npm run ts-check",
+    "dev": "nodemon",
+    "start": "ts-node --transpile-only ./src",
+    "lint": "tslint ./src/*",
+    "lint-fix": "tslint ./src/* --fix",
+    "ts-check": "tsc --noEmit --pretty"
   },
   "keywords": [],
   "author": "",
@@ -24,15 +27,23 @@
     "moment": "^2.24.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
-    "sharp": "^0.22.1"
+    "sharp": "^0.22.1",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.3",
     "eslint": "^6.0.1",
     "eslint-plugin-jest": "^22.7.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "nodemon": "^1.19.1"
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
+    "tslint-eslint-rules": "^5.4.0"
   },
   "engines": {
     "node": ">=10.0.0"
