--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "test": "jest --verbose && npm run ts-check",
     "dev": "nodemon",
     "start": "ts-node --transpile-only ./src",
-    "lint": "tslint ./src/*",
-    "lint-fix": "tslint ./src/* --fix",
+    "lint": "tslint ./src/**/*",
+    "lint-fix": "tslint ./src/**/* --fix",
     "ts-check": "tsc --noEmit --pretty"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
     "chalk": "^2.4.2",
     "color-string": "^1.5.3",
     "discord.js": "^11.5.1",
-    "discordjs-command": "^0.8.7",
+    "discordjs-command": "^0.9.0",
     "discordjs-prompter": "^1.0.0",
     "filesize": "^4.1.2",
     "jimp": "^0.6.4",
@@ -26,21 +27,21 @@
     "loglevel-plugin-prefix": "^0.8.4",
     "moment": "^2.24.0",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
     "sharp": "^0.22.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@types/color-string": "^1.5.0",
+    "@types/filesize": "^4.1.0",
+    "@types/hapi__joi": "^15.0.2",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.3",
-    "eslint": "^6.0.1",
-    "eslint-plugin-jest": "^22.7.2",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-security": "^1.4.0",
+    "@types/request-promise-native": "^1.0.16",
+    "@types/sharp": "^0.22.2",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
+    "request-promise-native": "^1.0.7",
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-eslint-rules": "^5.4.0"
