--- a/package.json
+++ b/package.json
@@ -4,47 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose && npm run ts-check",
-    "dev": "nodemon",
-    "start": "ts-node --transpile-only ./src",
-    "lint": "tslint ./src/**/*",
-    "lint-fix": "tslint ./src/**/* --fix",
-    "ts-check": "tsc --noEmit --pretty"
+    "start": "node ./dist/src",
+    "dev": "nodemon src/index.ts",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^15.1.0",
-    "chalk": "^2.4.2",
-    "color-string": "^1.5.3",
-    "discord.js": "^11.5.1",
-    "discordjs-command": "^0.9.0",
-    "discordjs-prompter": "^1.0.0",
-    "filesize": "^4.1.2",
-    "jimp": "^0.6.4",
-    "loglevel": "^1.6.3",
-    "loglevel-plugin-prefix": "^0.8.4",
-    "moment": "^2.24.0",
-    "request": "^2.88.0",
-    "sharp": "^0.22.1",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "color-string": "^1.6.0",
+    "discord.js": "^13.3.1",
+    "dotenv": "^10.0.0",
+    "filesize": "^8.0.6",
+    "jimp": "^0.16.1",
+    "moment": "^2.29.1",
+    "nanocolors": "^0.2.13",
+    "sensum": "^1.3.1-1",
+    "sharp": "^0.29.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/color-string": "^1.5.0",
-    "@types/filesize": "^4.1.0",
-    "@types/hapi__joi": "^15.0.2",
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.3",
-    "@types/request-promise-native": "^1.0.16",
-    "@types/sharp": "^0.22.2",
-    "jest": "^24.8.0",
-    "nodemon": "^1.19.1",
-    "request-promise-native": "^1.0.7",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.18.0",
-    "tslint-eslint-rules": "^5.4.0"
+    "@types/filesize": "^4.2.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.9",
+    "@types/sharp": "^0.29.4",
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.15",
+    "ts-jest": "^27.0.7"
   },
   "engines": {
     "node": ">=10.0.0"
